--- a/_charts/loki/6.29.0/values.override.yaml
+++ b/_charts/loki/6.29.0/values.override.yaml
@@ -555,6 +555,7 @@ loki:
 # Chart Testing
 #
 ######################################################################################################################
+
 # -- Section for configuring optional Helm test
 test:
   enabled: false
@@ -660,7 +661,7 @@ ingress:
 ingester:
   # -- Number of replicas for the ingester, when zoneAwareReplication.enabled is true, the total
   # number of replicas will match this value with each zone having 1/3rd of the total replicas.
-  replicas: 0
+  replicas: 3
   # -- hostAliases to add
   hostAliases: []
   #  - ip: 1.2.3.4
@@ -850,7 +851,7 @@ ingester:
 # --  Configuration for the distributor
 distributor:
   # -- Number of replicas for the distributor
-  replicas: 0
+  replicas: 3
   # -- hostAliases to add
   hostAliases: []
   #  - ip: 1.2.3.4
@@ -928,7 +929,7 @@ distributor:
               app.kubernetes.io/component: distributor
           topologyKey: kubernetes.io/hostname
   # -- Pod Disruption Budget maxUnavailable
-  maxUnavailable: null
+  maxUnavailable: 2
   # -- Max Surge for distributor pods
   maxSurge: 0
   # -- Node selector for distributor pods
@@ -944,7 +945,7 @@ distributor:
 # --  Configuration for the querier
 querier:
   # -- Number of replicas for the querier
-  replicas: 0
+  replicas: 3
   # -- hostAliases to add
   hostAliases: []
   #  - ip: 1.2.3.4
@@ -1033,7 +1034,7 @@ querier:
               app.kubernetes.io/component: querier
           topologyKey: kubernetes.io/hostname
   # -- Pod Disruption Budget maxUnavailable
-  maxUnavailable: null
+  maxUnavailable: 2
   # -- Max Surge for querier pods
   maxSurge: 0
   # -- Node selector for querier pods
@@ -1062,7 +1063,7 @@ querier:
 # -- Configuration for the query-frontend
 queryFrontend:
   # -- Number of replicas for the query-frontend
-  replicas: 0
+  replicas: 2
   # -- hostAliases to add
   hostAliases: []
   #  - ip: 1.2.3.4
@@ -1140,7 +1141,7 @@ queryFrontend:
               app.kubernetes.io/component: query-frontend
           topologyKey: kubernetes.io/hostname
   # -- Pod Disruption Budget maxUnavailable
-  maxUnavailable: null
+  maxUnavailable: 1
   # -- Node selector for query-frontend pods
   nodeSelector: {}
   # -- Topology Spread Constraints for query-frontend pods
@@ -1156,7 +1157,7 @@ queryScheduler:
   # -- Number of replicas for the query-scheduler.
   # It should be lower than `-querier.max-concurrent` to avoid generating back-pressure in queriers;
   # it's also recommended that this value evenly divides the latter
-  replicas: 0
+  replicas: 2
   # -- hostAliases to add
   hostAliases: []
   #  - ip: 1.2.3.4
@@ -1218,7 +1219,7 @@ queryScheduler:
 # -- Configuration for the index-gateway
 indexGateway:
   # -- Number of replicas for the index-gateway
-  replicas: 0
+  replicas: 2
   # -- Whether the index gateway should join the memberlist hashring
   joinMemberlist: true
   # -- hostAliases to add
@@ -1271,7 +1272,7 @@ indexGateway:
               app.kubernetes.io/component: index-gateway
           topologyKey: kubernetes.io/hostname
   # -- Pod Disruption Budget maxUnavailable
-  maxUnavailable: null
+  maxUnavailable: 1
   # -- Node selector for index-gateway pods
   nodeSelector: {}
   # -- Topology Spread Constraints for index-gateway pods
@@ -1310,7 +1311,7 @@ indexGateway:
 # -- Configuration for the compactor
 compactor:
   # -- Number of replicas for the compactor
-  replicas: 0
+  replicas: 1
   # -- hostAliases to add
   hostAliases: []
   #  - ip: 1.2.3.4
