修剪变量：修改compactor配置。

--- a/_charts/loki/6.29.0/values.override.yaml
+++ b/_charts/loki/6.29.0/values.override.yaml
@@ -1376,15 +1376,15 @@ compactor:
     grpc: ""
   persistence:
     # -- Enable creating PVCs for the compactor
-    enabled: false
+    enabled: true
     # -- Size of persistent disk
-    size: 10Gi
+    size: 100Gi
     # -- Storage class to be used.
     # If defined, storageClassName: <storageClass>.
     # If set to "-", storageClassName: "", which disables dynamic provisioning.
     # If empty or set to null, no storageClassName spec is
     # set, choosing the default provisioner (gp2 on AWS, standard on GKE, AWS, and OpenStack).
-    storageClass: null
+    storageClass: infra
     # -- Annotations for compactor PVCs
     annotations: {}
     # -- List of the compactor PVCs
