--- a/_charts/loki/0.80.3/values.yaml
+++ b/_charts/loki/0.80.3/values.yaml
@@ -1966,9 +1966,9 @@ memcachedFrontend:
 
 memcachedIndexQueries:
   # -- Specifies whether the Memcached index queries cache should be enabled
-  enabled: false
+  enabled: true
   # -- Number of replicas for memcached-index-queries
-  replicas: 1
+  replicas: 3
   # -- hostAliases to add
   hostAliases: []
   #  - ip: 1.2.3.4
@@ -2021,7 +2021,7 @@ memcachedIndexQueries:
   tolerations: []
   persistence:
     # -- Enable creating PVCs which will persist cached data through restarts
-    enabled: false
+    enabled: true
     # -- Size of persistent or memory disk
     size: 10Gi
     # -- Storage class to be used.
@@ -2029,7 +2029,7 @@ memcachedIndexQueries:
     # If set to "-", storageClassName: "", which disables dynamic provisioning.
     # If empty or set to null, no storageClassName spec is
     # set, choosing the default provisioner (gp2 on AWS, standard on GKE, AWS, and OpenStack).
-    storageClass: null
+    storageClass: infra
 
 memcachedIndexWrites:
   # -- Specifies whether the Memcached index writes cache should be enabled
